# rosprojects

./: .gitignore  commands-used.sh
.devcontainer/: ChangesMade  Dockerfile  devcontainer.json
robotic-arm-ws/src/mycobot_ros2/mycobot_arm_controller/: package.xml  setup.cfg  setup.py
robotic-arm-ws/src/mycobot_ros2/mycobot_arm_controller/launch/: launch_robot.py
robotic-arm-ws/src/mycobot_ros2/mycobot_arm_controller/mycobot_arm_controller/: control_joint.py
robotic-arm-ws/src/mycobot_ros2/mycobot_arm_controller/rviz/: rviz_config.rviz
robotic-arm-ws/src/mycobot_ros2/mycobot_arm_controller/urdf/: my_robot.urdf.xacro
robotic-arm-ws/src/mycobot_ros2/mycobot_description/: CMakeLists.txt  package.xml
robotic-arm-ws/src/mycobot_ros2/mycobot_gazebo/: CMakeLists.txt  package.xml
robotic-arm-ws/src/mycobot_ros2/mycobot_ros2/: package.xml
ros2-ws/src/my_tf/: package.xml  setup.py
ros2-ws/src/my_tf/launch/: launch_tf.py
ros2-ws/src/my_tf/my_tf/: publish_tf.py
ros2-ws/src/my_tf/rviz/: tf_rviz_config.rviz
ros2_ws/: commands_used.sh  python_node_template.py
ros2_ws/src/actions_py/: package.xml  setup.py
ros2_ws/src/actions_py/actions_py/: count_until_client.py  count_until_server.py  (+2 more)
ros2_ws/src/my_cpp_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/my_py_pkg/: package.xml  setup.py
ros2_ws/src/my_robot_bringup/: package.xml
ros2_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/turtle_killer_pkg/: package.xml  setup.cfg  setup.py
rvizz-test/src/visulaization_pkg/: package.xml  setup.py
urdf-test/: my_robot.urdf
(+31 files in other folders)
