[develop]
script_dir=$base/lib/mycobot_arm_controller
[install]
install_scripts=$base/lib/mycobot_arm_controller

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[metadata]
name = mycobot_arm_controller
version = 0.0.0


[options]
packages = find:
install_requires =
  rclpy
  sensor_msgs
  std_msgs